<resources>
    <string name="app_name">SCEE</string>
    <string name="app_description">Simulador de Conta de Energia Elétrica</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cadastros">Cadastros</string>
    <string name="dashboard">Dashboard</string>
    <string name="configuraces">Configurações</string>
    <string name="departamento">Departamento</string>
    <string name="equipamento">Equipamento</string>

    <string name="novo_departamento">Novo Departamento</string>
    <string name="editar_departamento">Editar Departamento</string>
    <string name="descricao_etc">Descrição…</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>

    <string name="msg_departamento_not_excluido">Departamento só pode ser excluído se não houver equipamentos vinculados.</string>

    <string name="kwh">"KWh"</string>
    <string name="rs">R$</string>
    <string name="w">W</string>
    <string name="ok">OK</string>


    <string name="equipamentos">Equipamentos</string>
    <string name="nome_do_equipamento">Nome do Equipamento*</string>
    <string name="potencia_requerido">Potência (em Whats)*</string>
    <string name="horas_dia_requerido">Tempo Ligado (Horas por Dia)*</string>
    <string name="dias_mes_requerido">Período (Dias)*</string>
    <string name="campo_obrigatorio">Campo Obrigatório!</string>
    <string name="s_salvo">%s salvo com Suscesso!</string>
    <string name="s_excluido">%s excluído com Sucesso!</string>
    <string name="simular_fatura">Simular Fatura</string>
    <string name="atencao">Atenção!</string>

    <string name="tarifas">Tarifas</string>
    <string name="ate_30_kwh">Até 30KWh</string>
    <string name="ate_50_kwh">Até 50KWh</string>
    <string name="entre_0_30">Entre 0 e 30 KWh</string>
    <string name="entre_31_50">Entre 31 e 50 KWh</string>
    <string name="valor_tarifa">Valor da Tarifa</string>
    <string name="baixa_renda_ate_50">Baixa Renda com consumo Até 50 KWh</string>
    <string name="tempo_de_uso">Tempo de Uso:</string>
    <string name="horas_dia">horas/dia</string>
    <string name="virgula">,</string>
    <string name="dias_mes">dias/mes.</string>
    <string name="potencia">Potencia:</string>
    <string name="numero_de_equipamentos">Quantidade de Equipamentos:</string>
    <string name="detalhes_da_fatura">Detalhes da Fatura</string>
    <string name="resumo_de_departamentos">Resumo de Departamentos</string>
    <string name="n_mero_de_departamentos">Número de Departamentos</string>
    <string name="consumo_total">Consumo Total</string>
    <string name="valor_total_da_fatura">Valor Total da Fatura</string>
    <string name="quantidade_de_departamentos">Quantidade de Departamentos</string>
    <string name="quantidade_de_equipamentos">Quantidade de Equipamentos</string>
    <string name="valor_total">Valor Total</string>
    <string name="title_novo_equipamento">Novo Equipamento</string>
    <string name="title_editar_equipamento">Editar Equipamento</string>
    <string name="descricao_da_fatura">Descricao da Fatura</string>
    <string name="item">Item</string>
    <string name="quantidade">Qtd.</string>
    <string name="preco">Preço</string>
    <string name="valor_rs">Valor (R$)</string>
    <string name="total_da_fatura">Total da Fatura</string>
    <string name="informacoes_de_tributos">INFORMAÇÕES DE TRIBUTOS</string>
    <string name="porcento">%</string>
    <string name="valor_do_imposto">Valor do Imposto</string>
    <string name="base_de_calculo">Base de Calculo</string>
</resources>
