<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/dashboard" />

    <item android:title="@string/cadastros">
        <menu>
            <item
                android:id="@+id/nav_departamento"
                android:icon="@drawable/ic_nav_departamento"
                android:title="@string/departamento" />
            <item
                android:id="@+id/nav_equipamento"
                android:icon="@drawable/ic_nav_equipamento"
                android:title="@string/equipamento" />
        </menu>
    </item>
    <item android:title="@string/configuraces">
        <menu>
            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/ic_nav_configuracoes"
                android:title="@string/configuraces" />
        </menu>
    </item>
</menu>
