<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="#FF909090" />


            <TextView
                android:id="@+id/txvTipoTarifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="#FF909090" />

            <TableRow android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantidade_de_departamentos" />

                <TextView
                    android:id="@+id/txvQtdDepartamentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="end" />
            </TableRow>

            <TableRow android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantidade_de_equipamentos" />

                <TextView
                    android:id="@+id/txvQtdEquipamentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="end" />
            </TableRow>

            <TableRow android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumo_total" />

                <TextView
                    android:id="@+id/txvConsumoTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/kwh" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="#FF909090" />

            <TableRow android:layout_marginBottom="3dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_total_da_fatura" />

                <TextView
                    android:id="@+id/txvValotTotalFatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/rs" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="16dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:text="@string/descricao_da_fatura"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:background="#FF909090" />

        <TableLayout
            android:id="@+id/tabelaFatura"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="4">

            <TableRow android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="3"
                    android:text="@string/item"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.4"
                    android:text="@string/quantidade"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/preco"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valor_rs"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="#FF909090" />
        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:background="#FF909090" />
    </LinearLayout>
</ScrollView>