<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="alunounifacs.com.br.scee.activity.ConfiguracoesActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tarifas"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baixa_renda_ate_50"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/entre_0_30" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor_tarifa"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/entre_31_50" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor_tarifa"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Impostos e Tributos"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_icms_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="% ICMS"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_pis1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="% PIS"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_cofins_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="% COFINS"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
